--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <input type="text" name="sobrenome" id="sobrenome" required>
             </div>
         </fieldset>
+        
 
         <div class="campo">
             <label for="email"><strong>Email:</strong></label>
@@ -46,11 +47,11 @@
                 <label for="endereco"><strong>Endereço: </strong></label>
                 <input type="text" name="endereco" id="endereco">
 
-            </div>
-
-            <div class="campo">
                 <label for="cidade"><strong>Cidade: </strong></label>
-                <input type="text" name="cidade" id="endereco">
+                <input type="text" name="cidade" id="cidade">
+
+                <label for="estado"><strong>Estado: </strong></label>
+                <input type="text" name="estado" id="estado">
 
             </div>
 
