--- a/cadastro_empresa.html
+++ b/cadastro_empresa.html
@@ -11,11 +11,29 @@
     <fieldset class="grupo">
         <div class="campo">
             <form method="POST" action="cadastro.php">
-            <label>Nome da Empresa:</label><input type="text" name="empresa" id="login"><br>
-            <label>Senha:</label><input type="password" name="senha" id="senha"><br>
-            <label>Endereco:</label><input type="text" name="endereco" id="endereco"><br>
-            <button class="botao" type="submit">Cadastrar</button>
+            <label>Nome da Empresa:</label><input type="text" name="empresa" id="login" required><br>
+            <label>CNPJ:</label><input type="text" name="cnpj" id="cnpj" required><br>
+            
         </div>
     </fieldset>
+
+    <fieldset class="grupo">
+        <div class="campo">
+            <label>CEP:</label><input type="number" name="cep" id="cep" required><br>
+            <label>Endereco:</label><input type="text" name="endereco" id="endereco"><br>
+            <label>Bairro:</label><input type="text" name="bairro" id="bairro"><br>
+        <label for="cod_estados">Estado:</label>
+        <select name="cod_estados" id="cod_estados">
+        <option value=""></option>
+
+            <label for="cod_cidades">Cidade:</label>
+            <select name="cod_cidades" id="cod_cidades">
+              <option value="">-- Escolha um estado --</option>
+            </select>
+
+        </div>
+    </fieldset>
+
+    <button class="botao" type="submit">Cadastrar</button>
 </body>
 </html>
