--- a/login_empresa.html
+++ b/login_empresa.html
@@ -11,7 +11,7 @@
     <fieldset class="grupo">
         <div class="campo">
             <form method="POST" action="login.php">
-            <label >Login:</label><input type="text" name="login" id="login"><br>
+            <label >Login:</label><input type="text" name="login" id="login" required><br>
             <label>Senha:</label><input type="password" name="senha" id="senha"><br>
             <button class="botao" type="submit">Entrar</button>
             <div class="direita">
