--- a/login_empresa.html
+++ b/login_empresa.html
@@ -13,12 +13,14 @@
             <form method="POST" action="login.php">
             <label >Login:</label><input type="text" name="login" id="login" required><br>
             <label>Senha:</label><input type="password" name="senha" id="senha"><br>
-            <button class="botao" type="submit">Entrar</button>
-            <div class="direita">
-                <div class="lado">
-                    <button class="botao" type="submit"><a href="cadastro.html">Cadastre-se</a></button>
-                </div>
-            </div>
+            <div class="botoes">
+
+                    <button class="botao_d" type="submit"><a href="cadastro_empresa.html">Cadastre-se</a></button>
+
+
+
+                    <button class="botao_e" type="submit"><a href="#">Entrar</a></button>
+
             </form>
         </div>
     </fieldset>
