--- a/info2.html
+++ b/info2.html
@@ -2,19 +2,27 @@
 
     <div class="img">
 
-        <img alt class="produto" src="./img/cand/p_cand_2.png">
+        <fieldset class="img">
+
+            <img alt class="produto" src="./img/cand/p_cand_2.png">
+
+        </fieldset>
 
     </div>
 
-    <div class="fieldset">
+    <div class="infor">
 
-        <div>
+        <fieldset class="grupo">
 
-            <h1>Canada Dry</h1>
+            <div>
 
-            <h3>Lorem Ipsum</h3>
+                <h1>Canada Dry</h1>
 
-        </div>
+                <h3>Lorem Ipsum</h3>
+
+            </div>
+
+        </fieldset>
 
         
 
