--- a/info2.html
+++ b/info2.html
@@ -1,12 +1,14 @@
 <div class="container">
 
-    <div class="img">
+    <fieldset class="img">
 
-        <fieldset class="img">
+        <div class="imgcand">
 
             <img alt class="produto" src="./img/cand/p_cand_2.png">
-
-        </fieldset>
+        
+        </div>
+        
+    </fieldset>
 
     </div>
 
