--- a/info2.html
+++ b/info2.html
@@ -1,10 +1,14 @@
-<div class="container">
+<div class="product-colum-left">
 
+    <div id="add"></div>
 
+    <div id="img">
 
-    <img class="img" src="./img/cand/p_cand_2.png">
-
-
+        <a href="./img/cand/p_cand_2.png"></a>
         
+    </div>
+
+
+
 
 </div>
