--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
           
             <div class="u-border-3 u-border-palette-4-base u-line u-line-horizontal u-line-1"></div><!--product_title-->
             <h2 class="u-custom-font u-font-merriweather u-product-control u-text u-text-1">
-            <a class="u-product-title-link" href="#"> <!-- - product_title_content ---> Amostra de produto <!-- - / product_title_content ---> </a>
+            <a class="u-product-title-link" href="#"> <!-- - product_title_content ---> Canada Dry <!-- - / product_title_content ---> </a>
             </h2><!--/product_title--><!--product_price-->
           
             <div class="u-custom-font u-font-merriweather u-product-control u-product-price u-product-price-1">
